# cppminer

./: CMakeLists.txt  CurrentWorkUnit.cpp  CurrentWorkUnit.h  main.cpp
